# NewsMind

./: README.md  main.py  pyproject.toml
