[project]
name = "newsmind"
version = "0.1.0"
description = "Local AI-powered news aggregator that extracts and summarizes news from multiple sources using a GGUF-based LLM."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-cpp-python>=0.3.2",
    "lxml-html-clean>=0.4.2",
    "newspaper3k>=0.2.8",
]
